# builder-cosmos-home

./: README_TAURI.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
client/: App.tsx  global.css
client/components/apps/: AppErrorBoundary.tsx  AppForge.tsx  Calculator.tsx  Calendar.tsx  CallSam.tsx  CameraApp.tsx  ChessGame.tsx  DocumentEditor.tsx  EnhancedCallSam.tsx  EnhancedCameraApp.tsx  EnhancedNotepad.tsx  FileConverter.tsx  Files.tsx  FlappyGame.tsx  Gallery.tsx  Game2048.tsx  InfiniteRunner.tsx  MemoryAlarms.tsx  NativeFileManager.tsx  NativeSystemMonitor.tsx  Notepad.tsx  NyxBrowser.tsx  NyxManual.tsx  Presentations.tsx  ResoNyx.tsx  SamChat.tsx  Settings.tsx  Spreadsheet.tsx  VoiceRecorder.tsx  WebBrowser.tsx  WindowsMediaPlayer.tsx
client/components/mobile/: AndroidNavigation.tsx  AndroidStatusBar.tsx  MobileGestureSystem.tsx  MobileHomeScreen.tsx  NyxMobileHomeScreen.tsx  OneUIHomeScreen.tsx  QuickSettingsPanel.tsx
client/components/os/: BootAnimation.tsx  (+25 more)
client/hooks/: useDeviceDetection.ts  useDeviceInfo.ts  useFocusable.ts  useGestureEngine.ts  useIconInteraction.ts  useKeyboardShortcuts.ts  useLiquidGlass.ts  usePerformanceManager.ts  useTauriIntegration.ts
client/lib/: tauri-api.ts
client/services/: ai-service.ts
client/store/: desktop-store.ts  device-auth-store.ts  sam-store.ts  theme-store.ts  virtual-desktop-store.ts  wallpaper-store.ts  window-store.ts
docs/: DESKTOP_INTEGRATION.md  TAURI_SETUP.md  TESTING_GUIDE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
(+2 files in other folders)
